Chapter 4 (Decision Trees) Done

--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,8 @@
 \chapter{Exploring Data}
 \input{chapters/chap3.tex}
 
-
+\chapter{Decision Trees}
+\input{chapters/chap4.tex}
 
 % \bibliography{bibfile}
 
