Chapter 5+6 (Evaluation, Regression and Ensemble) Done

--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,12 @@
 \chapter{Decision Trees}
 \input{chapters/chap4.tex}
 
+\chapter{Model Evaluation}
+\input{chapters/chap5.tex}
+
+\chapter{Regression Trees and Ensemble methods}
+\input{chapters/chap6.tex}
+
 % \bibliography{bibfile}
 
 \end{document}
