Chapter 7 (Locality-Sensitive Hashing) Done

--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,9 @@
 \chapter{Regression Trees and Ensemble methods}
 \input{chapters/chap6.tex}
 
+\chapter{Locality-Sensitive Hashing}
+\input{chapters/chap7.tex}
+
 % \bibliography{bibfile}
 
 \end{document}
