Chapter 8 (Dimensionality Reduction) Done

--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,9 @@
 \chapter{Locality-Sensitive Hashing}
 \input{chapters/chap7.tex}
 
+\chapter{Dimensionality reduction}
+\input{chapters/chap8.tex}
+
 % \bibliography{bibfile}
 
 \end{document}
