Chapter 9 (Naive Bayes) Done

--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,9 @@
 \chapter{Dimensionality reduction}
 \input{chapters/chap8.tex}
 
+\chapter{Advanced Classifiers (Naive Bayes)}
+\input{chapters/chap9.tex}
+
 % \bibliography{bibfile}
 
 \end{document}
