Chapter 10 (Linear Regression) Done

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,9 @@
 \chapter{Advanced Classifiers (Naive Bayes)}
 \input{chapters/chap9.tex}
 
+\chapter{Advanced Classifiers (Linear Regression)}
+\input{chapters/chap10.tex}
+
 % \bibliography{bibfile}
 
 \end{document}
