Chapter 11 (Logistic Regression) Done

--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,9 @@
 \chapter{Advanced Classifiers (Linear Regression)}
 \input{chapters/chap10.tex}
 
+\chapter{Advanced Classifiers (Logistic Regression)}
+\input{chapters/chap11.tex}
+
 % \bibliography{bibfile}
 
 \end{document}
