Chapter 12 (Regularization) Done

--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,9 @@
 \chapter{Advanced Classifiers (Logistic Regression)}
 \input{chapters/chap11.tex}
 
+\chapter{Classification (Regularization)}
+\input{chapters/chap12.tex}
+
 % \bibliography{bibfile}
 
 \end{document}
