--- a/main.tex
+++ b/main.tex
@@ -52,6 +52,10 @@
 \chapter{Classification (Regularization)}
 \input{chapters/chap12.tex}
 
+% \chapter{Neural Network Computations}
+\chapter{Deep Learning (Neural Network)}
+\input{chapters/chap13.tex}
+
 % \bibliography{bibfile}
 
 \end{document}
