--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,7 @@
 \chapter{Deep Learning (Neural Network)}
 \input{chapters/chap13.tex}
 
-% \bibliography{bibfile}
+\bibliographystyle{unsrt}
+\bibliography{references.bib}
 
 \end{document}
