Fixed bibtex error.

--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,6 @@
 \chapter{Deep Learning (Neural Network)}
 \input{chapters/chap13.tex}
 
-\bibliographystyle{unsrt}
-\bibliography{references.bib}
+\bibliography{references}
 
 \end{document}
