--- a/references.bib
+++ b/references.bib
@@ -13,3 +13,14 @@
     url = "https://en.wikipedia.org/w/index.php?title=Similarity_measure&oldid=1007400511",
     note = "[Online; accessed 10-May-2021]"
 }
+
+@article{loh2011classification,
+  title={Classification and regression trees},
+  author={Loh, Wei-Yin},
+  journal={Wiley interdisciplinary reviews: data mining and knowledge discovery},
+  volume={1},
+  number={1},
+  pages={14--23},
+  year={2011},
+  publisher={Wiley Online Library}
+}
