Added kolmogorov to bibliography.

--- a/references.bib
+++ b/references.bib
@@ -24,3 +24,10 @@
   year={2011},
   publisher={Wiley Online Library}
 }
+
+@book{kolmogorov2018foundations,
+  title={Foundations of the theory of probability: Second English Edition},
+  author={Kolmogorov, Andre{\u\i}} Nikolaevich and Bharucha-Reid, Albert T},
+  year={2018},
+  publisher={Courier Dover Publications}
+}
