Added new kolmogorov bibtex and regression analysis wiki.

--- a/references.bib
+++ b/references.bib
@@ -25,9 +25,27 @@
   publisher={Wiley Online Library}
 }
 
-@book{kolmogorov2018foundations,
-  title={Foundations of the theory of probability: Second English Edition},
-  author={Kolmogorov, Andre{\u\i}} Nikolaevich and Bharucha-Reid, Albert T},
-  year={2018},
-  publisher={Courier Dover Publications}
+@book{kolmogorov1960foundations,
+  added-at = {2009-07-28T17:55:31.000+0200},
+  author = {Kolmogorov, Andrey N.},
+  biburl = {https://www.bibsonomy.org/bibtex/2585bc3d9329dc32d35b19b6d55930489/asalber},
+  edition = 2,
+  interhash = {66d24417fe93ce0232e9acace5e78fb0},
+  intrahash = {585bc3d9329dc32d35b19b6d55930489},
+  keywords = {3 probability},
+  month = jun,
+  publisher = {Chelsea Pub Co},
+  timestamp = {2009-07-28T17:55:31.000+0200},
+  title = {Foundations of the Theory of Probability},
+  url = {http://www.clrc.rhul.ac.uk/resources/fop/Theory%20of%20Probability%20(small).pdf},
+  year = 1960
+}
+
+
+@misc{enwiki:regressionanalysis,
+  author = "{Wikipedia contributors}",
+  title = "Regression analysis --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2021",
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Regression_analysis&oldid=1018847859}",
+  note = "[Online; accessed 13-May-2021]"
 }
