--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,9 @@
 % load lecture note class
 \documentclass{notesclass}
+
+\usepackage[ruled,vlined]{algorithm2e}
+\SetKwRepeat{Do}{do}{while}%
+
 \begin{document}
 \begin{titlepage}
     \university{University of Stavanger}
@@ -14,7 +18,6 @@
   \hypersetup{linkcolor=black}
   \tableofcontents
 }
-
 
 \chapter{Introduction to Data Mining}
 \input{chapters/chap1.tex}
