Added mathoverflow citation.

--- a/references.bib
+++ b/references.bib
@@ -61,3 +61,12 @@
  pages={2825--2830},
  year={2011}
 }
+
+@misc{mathoverflowquestion,
+    TITLE = {Number of polynomial terms for certain degree and certain number of variables},
+    AUTHOR = {Wolfgang},
+    HOWPUBLISHED = {MathOverflow},
+    NOTE = {URL:https://mathoverflow.net/q/225956 (version: 2015-12-12)},
+    EPRINT = {https://mathoverflow.net/q/225956},
+    URL = {https://mathoverflow.net/q/225956}
+}
