--- a/main.tex
+++ b/main.tex
@@ -55,9 +55,12 @@
 \chapter{Classification (Regularization)}
 \input{chapters/chap12.tex}
 
-% \chapter{Neural Network Computations}
 \chapter{Deep Learning (Neural Network)}
 \input{chapters/chap13.tex}
+
+\chapter{Convolutional Neural Nettwork (CNN)}
+\input{chapters/chap14.tex}
+
 
 \bibliography{references}
 
