Added calculations for output size and parameters of cnn.

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 % load lecture note class
 \documentclass{notesclass}
 
+\usepackage{amsmath}
 \usepackage[ruled,vlined]{algorithm2e}
 \SetKwRepeat{Do}{do}{while}%
 
