Added a bit about neural networks.

--- a/main.tex
+++ b/main.tex
@@ -62,6 +62,8 @@
 \chapter{Convolutional Neural Nettwork (CNN)}
 \input{chapters/chap14.tex}
 
+\chapter{Recurrent Neural Network (RNN)}
+\input{chapters/chap15.tex}
 
 \bibliography{references}
 
