--- a/references.bib
+++ b/references.bib
@@ -68,5 +68,6 @@
     HOWPUBLISHED = {MathOverflow},
     NOTE = {URL:https://mathoverflow.net/q/225956 (version: 2015-12-12)},
     EPRINT = {https://mathoverflow.net/q/225956},
-    URL = {https://mathoverflow.net/q/225956}
+    URL = {https://mathoverflow.net/q/225956},
+    year={2011}
 }
